--- a/home/1.md
+++ b/home/1.md
@@ -25,7 +25,7 @@ $ Hi.
   the URL.
     * i.e. `http://geekwise-ror.herokuapp.com/d1` becomes
       `http://geekwise-ror.herokuapp.com/d1/print`.
-* Try it: [http://geekwise-ror.herokuapp.com/home/print](http://geekwise-ror.herokuapp.com/home/print)
+* Try it: [http://geekwise-ror.herokuapp.com/print](http://geekwise-ror.herokuapp.com/print)
 
 !SLIDE columns
 # Geekwise: Ruby on Rails
