--- a/home/1.md
+++ b/home/1.md
@@ -32,6 +32,7 @@ $ Hi.
 
 ## Ruby
 
+* [Itinerary](itinerary)
 * [Day 1/12](d1): Intro & Getting Started
 * [Day 2/12](d2): Language Basics
 * [Day 3/12](d3): Language LessBasics
