--- a/home/1.md
+++ b/home/1.md
@@ -9,17 +9,12 @@ $ Hi.
 
 * These slides go along with the
 [Geekwise Ruby on Rails course](http://geekwiseacademy.com/courses).
-
-
-!SLIDE bullets
-# Geekwise: Ruby on Rails
-
 * Get the Kaffeesatz font from
 [here](http://www.yanone.de/typedesign/kaffeesatz/).
 
 
 !SLIDE bullets
-# Geekwise: Ruby on Rails
+# Print-y
 
 * Any set of slides can be viewed in printable form by adding /print to
   the URL.
@@ -28,7 +23,7 @@ $ Hi.
 * Try it: [http://geekwise-ror.herokuapp.com/print](http://geekwise-ror.herokuapp.com/print)
 
 !SLIDE columns
-# Geekwise: Ruby on Rails
+# Course Itinerary
 
 ## Ruby
 
