Adjusted to new itinerary

--- a/home/1.md
+++ b/home/1.md
@@ -31,16 +31,17 @@ $ Hi.
 * [Day 1/12](d1): Intro & Getting Started
 * [Day 2/12](d2): Language Basics
 * [Day 3/12](d3): Language LessBasics
-* [Day 4/12](d4): Testing
-* [Day 5/12](d5): Ruby & The Web
+* [Day 4/12](d4): Ruby & The Web
+* [Day 5/12](d5): Intro to Rails
+
 
 ## Rails
 
-* [Day 6/12](d6): Intro to Rails
-* [Day 7/12](d7): Digging in to Rails
-* [Day 8/12](d8): Digging Deeper
-* [Day 9/12](d9): Action*
-* [Day 10/12](d10): ActiveRecord & ORMs
+* [Day 6/12](d6): Digging in to Rails
+* [Day 7/12](d9): Action*
+* [Day 8/12](d8): ActiveRecord & ORMs
+* [Day 9/12](d9): Digging Deeper
+* [Day 10/12](d10): Putting it out there
 * [Day 11/12](d11): APIs
 * [Day 12/12](d12): What next?
 
