Lil more d1 cleanup

--- a/home/1.md
+++ b/home/1.md
@@ -16,7 +16,7 @@ $ Hi.
 !SLIDE bullets
 # Print-y
 
-* Any set of slides can be viewed in printable form by adding /print to
+* Any set of slides can be viewed in printable form by adding `/print` to
   the URL.
     * i.e. `http://geekwise-ror.herokuapp.com/d1` becomes
       `http://geekwise-ror.herokuapp.com/d1/print`.
