Updated with latest itinerary

--- a/home/1.md
+++ b/home/1.md
@@ -38,10 +38,10 @@ $ Hi.
 ## Rails
 
 * [Day 6/12](d6): Digging in to Rails
-* [Day 7/12](d9): Action*
-* [Day 8/12](d8): ActiveRecord & ORMs
-* [Day 9/12](d9): Digging Deeper
-* [Day 10/12](d10): Putting it out there
-* [Day 11/12](d11): APIs
+* [Day 7/12](d7): Flockr: Authentication, Part 1
+* [Day 8/12](d8): Flockr: Authentication, Part 2; Adding Photos
+* [Day 9/12](d9): Finishing Flockr
+* [Day 10/12](d10): Digging Deeper
+* [Day 11/12](d11): Putting it out there; APIs
 * [Day 12/12](d12): What next?
 
